fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@
 
 html {
   background-color: #f0f0f0;
-  overflow: hidden;
 }
 
 main{
